// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toolbar default renders default toolbar 1`] = `
<div
  className="toolbar"
  onClick={[Function]}
>
  <div />
  <div
    className="shared"
  >
    <button
      aria-label="Done"
      className="MuiButtonBase-root-7 MuiIconButton-root-1 iconRoot iconRoot"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "height": "28px",
          "width": "28px",
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-6"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-10"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-16"
      />
    </button>
  </div>
</div>
`;

exports[`toolbar renders custom toolbar 1`] = `
<div
  className="toolbar"
  onClick={[Function]}
>
  <div>
     --------- custom toolbar ----------- 
  </div>
  <div
    className="shared"
  >
    <button
      aria-label="Delete"
      className="MuiButtonBase-root-7 MuiIconButton-root-1 iconRoot iconRoot"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "height": "28px",
          "width": "28px",
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-6"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-10"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-16"
      />
    </button>
    <button
      aria-label="Done"
      className="MuiButtonBase-root-7 MuiIconButton-root-1 iconRoot iconRoot"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "height": "28px",
          "width": "28px",
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-6"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-10"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-16"
      />
    </button>
  </div>
</div>
`;
